fix font breaking on mobile 2

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@font-face {
+	font-family: Kollektif;
+	src: url('Kollektif.ttf') format('truetype'),
+		 url('Kollektif.woff') format('woff'),
+		 url('Kollektif.woff2') format('woff2'),
+		 url('Kollektif.eot') format('embedded-opentype'),
+		 url('Kollektif.svg#Kollektif') format('svg');
+}
+
 html {
 	background-color: #f5fdff;
 	scroll-behavior: smooth;
@@ -8,11 +17,6 @@ body {
 	margin: 0;
 	height: 100%;
 	font-family: Kollektif;
-	src: url('Kollektif.ttf') format('truetype'),
-		 url('Kollektif.woff') format('woff'),
-		 url('Kollektif.woff2') format('woff2'),
-		 url('Kollektif.eot') format('embedded-opentype'),
-		 url('Kollektif.svg#Kollektif') format('svg');
 }
 
 #logo {
